# rules_distroless

./: .bazelrc  .bazelversion  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  BUILD.bazel  MODULE.bazel  README.md  SECURITY.md  WORKSPACE.bazel  oci_rt_tarball.bzl  oci_rt_tarball.sh
.bcr/: config.yml  metadata.template.json  presubmit.yml  source.template.json
.github/workflows/: ci.yaml  release.yml  release_prep.sh
apt/: BUILD.bazel  apt.bzl  defs.bzl  extensions.bzl  index.bzl
apt/private/: BUILD.bazel  apt_deb_repository.bzl  apt_dep_resolver.bzl  copy.sh.tmpl  deb_import.bzl  deb_postfix.bzl  deb_resolve.bzl  deb_translate_lock.bzl  dpkg_info.bzl  dpkg_info.sh  dpkg_status.bzl  dpkg_status.sh  dpkg_statusd.bzl  dpkg_statusd.sh  index.bzl  lockfile.bzl  manifest.bzl  nested_dict.bzl  package.BUILD.tmpl  package_arch.BUILD.tmpl  package_index.bzl  package_resolution.bzl  pkg.bzl  resolve.bzl  starlark_codegen.bzl  starlark_codegen_utils.bzl  util.bzl  version.bzl  version_constraint.bzl
apt/tests/: BUILD.bazel  apt_deb_repository_test.bzl  apt_dep_resolver_test.bzl  lockfile_test.bzl  manifest_test.bzl  mocks.bzl  nested_dict_test.bzl  package_index_test.bzl  package_resolution_test.bzl  pkg_test.bzl  resolution_test.bzl  starlark_codegen_test.bzl  util.bzl  util_test.bzl  version_constraint_test.bzl  version_test.bzl
apt/tests/resolution/: BUILD.bazel  arch_all.yaml  clang.yaml
distroless/: BUILD.bazel  defs.bzl  dependencies.bzl  repositories.bzl  toolchains.bzl
distroless/private/: BUILD.bazel  JavaKeyStore.java  cacerts.bzl  cacerts.sh  flatten.bzl  flatten.sh  group.bzl  home.bzl  java_keystore.bzl  java_keystore.sh  locale.bzl  locale.sh  os_release.bzl  passwd.bzl  tar.bzl  util.bzl
distroless/tests/: BUILD.bazel  asserts.bzl
docs/: BUILD.bazel  MODULE.bazel  apt.md  apt_macro.md  deb_index.md  rules.md
e2e/bzlmod/: MODULE.bazel  bullseye.lock.json
e2e/shared_dependencies/: bullseye.lock.json
e2e/smoke/: BUILD  MODULE.bazel  README.md  WORKSPACE.bazel  amd_only.lock.json  amd_only.yaml  bullseye.lock.json  bullseye.yaml  test_linux_amd64.yaml  test_linux_arm64.yaml
examples/apt/: BUILD.bazel  bullseye.lock.json  bullseye.yaml  test.yaml  test_linux_amd64.yaml  test_linux_arm64.yaml
examples/apt_security/: BUILD.bazel  security.yaml
examples/cacerts/: BUILD.bazel
examples/debian_flat_repo/: BUILD.bazel  bullseye_rproject.lock.json  bullseye_rproject.yaml  nvidia_ubuntu2404_cuda.lock.json  nvidia_ubuntu2404_cuda.yaml  test_linux_amd64.yaml  test_linux_arm64.yaml
examples/debian_flat_repository/: BUILD.bazel  bullseye.lock.json  bullseye.yaml  test_linux_amd64.yaml
examples/debian_shared_dependencies/: BUILD.bazel  bullseye.lock.json  bullseye.yaml
examples/debian_snapshot/: BUILD.bazel  bullseye.lock.json  bullseye.yaml  bullseye_nolock.yaml  test_linux_amd64.yaml  test_linux_arm64.yaml
examples/debian_snapshot_all_arch/: BUILD.bazel  bullseye_all.lock.json  bullseye_all.yaml
examples/debian_snapshot_security/: BUILD.bazel
examples/flatten/: BUILD.bazel
examples/group/: BUILD.bazel  group.expected.txt
examples/home/: BUILD.bazel
examples/info/: BUILD.bazel
examples/java_keystore/: BUILD.bazel  bundle.crt  expected.jks.output
examples/locale/: BUILD.bazel
examples/os_release/: BUILD.bazel  content.expected.txt
examples/passwd/: BUILD.bazel  passwd.expected.txt
examples/shared_dependencies/: BUILD.bazel  MODULE.bazel  WORKSPACE.bazel  bullseye.yaml  test_linux_arm64.yaml
examples/statusd/: BUILD.bazel
examples/ubuntu_snapshot/: BUILD.bazel  README.md  noble.lock.json  noble.yaml  test_linux_amd64.yaml  test_linux_arm64.yaml
