load("@rules_oci//oci:defs.bzl", "oci_image")
load(":oci_rt_tarball.bzl", "oci_rt_tarball")

oci_image(
    name = "image",
    architecture = "arm64",
    cmd = [
        "--arg1",
        "--arg2",
    ],
    entrypoint = ["/custom_bin"],
    env = {
        "ENV": "/test",
    },
    os = "linux",
)

oci_rt_tarball(
    name = "tarball",
    image = ":image",
    repo_tags = [
        "gcr.io/empty_base:latest",
        "two:is_a_company",
        "three:is_a_crowd",  # Used to test support for more than two repo_tags.
    ],
)
