# Marker that this is the root of a Bazel workspace.

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "example-bullseye-ca-certificates",
    build_file_content = 'exports_files(["data.tar.xz", "control.tar.xz"])',
    sha256 = "b2d488ad4d8d8adb3ba319fc9cb2cf9909fc42cb82ad239a26c570a2e749c389",
    urls = ["https://snapshot.debian.org/archive/debian/20231106T210201Z/pool/main/c/ca-certificates/ca-certificates_20210119_all.deb"],
)

http_archive(
    name = "example-bullseye-libc-bin",
    build_file_content = 'exports_files(["data.tar.xz"])',
    sha256 = "8b048ab5c7e9f5b7444655541230e689631fd9855c384e8c4a802586d9bbc65a",
    urls = ["https://snapshot.debian.org/archive/debian-security/20231106T230332Z/pool/updates/main/g/glibc/libc-bin_2.31-13+deb11u7_amd64.deb"],
)

http_archive(
    name = "example-bookworm-libc-bin",
    build_file_content = 'exports_files(["data.tar.xz"])',
    sha256 = "38c44247c5b3e864d6db2877edd9c9a0555fc4e23ae271b73d7f527802616df5",
    urls = ["https://snapshot.debian.org/archive/debian-security/20231106T230332Z/pool/updates/main/g/glibc/libc-bin_2.36-9+deb12u3_armhf.deb"],
)

load("//apt:index.bzl", "deb_index")

# bazel run @bullseye//:lock
deb_index(
    name = "bullseye",
    lock = "//examples/debian_snapshot:bullseye.lock.json",
    manifest = "//examples/debian_snapshot:bullseye.yaml",
)

load("@bullseye//:packages.bzl", "bullseye_packages")

bullseye_packages()

deb_index(
    name = "bullseye_nolock",
    manifest = "//examples/debian_snapshot:bullseye_nolock.yaml",
    nolock = True,
)

load("@bullseye_nolock//:packages.bzl", "bullseye_nolock_packages")

bullseye_nolock_packages()

# bazel run @bullseye_rproject//:lock
deb_index(
    name = "bullseye_rproject",
    lock = "//examples/debian_flat_repo:bullseye_rproject.lock.json",
    manifest = "//examples/debian_flat_repo:bullseye_rproject.yaml",
)

load("@bullseye_rproject//:packages.bzl", "bullseye_rproject_packages")

bullseye_rproject_packages()

# bazel run @nvidia_ubuntu2404_cuda//:lock
deb_index(
    name = "nvidia_ubuntu2404_cuda",
    lock = "//examples/debian_flat_repo:nvidia_ubuntu2404_cuda.lock.json",
    manifest = "//examples/debian_flat_repo:nvidia_ubuntu2404_cuda.yaml",
)

load("@nvidia_ubuntu2404_cuda//:packages.bzl", "nvidia_ubuntu2404_cuda_packages")

nvidia_ubuntu2404_cuda_packages()

deb_index(
    name = "apt_security",
    manifest = "//examples/debian_snapshot_security:security.yaml",
    nolock = True,
)

load("@apt_security//:packages.bzl", "apt_security_packages")

apt_security_packages()

# bazel run @shared_dependencies//:lock
deb_index(
    name = "shared_dependencies",
    lock = "//examples/debian_shared_dependencies:bullseye.lock.json",
    manifest = "//examples/debian_shared_dependencies:bullseye.yaml",
)

load("@shared_dependencies//:packages.bzl", "shared_dependencies_packages")

shared_dependencies_packages()

# bazel run @noble//:lock
deb_index(
    name = "noble",
    lock = "//examples/ubuntu_snapshot:noble.lock.json",
    manifest = "//examples/ubuntu_snapshot:noble.yaml",
)

load("@noble//:packages.bzl", "noble_packages")

noble_packages()
