load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files([
    "index.bzl",
])

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//apt/private:dpkg_status",
        "//apt/private:dpkg_statusd",
    ],
)

bzl_library(
    name = "index",
    srcs = ["index.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//apt/private:index",
        "//apt/private:resolve",
    ],
)

bzl_library(
    name = "extensions",
    srcs = ["extensions.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//apt/private:deb_import",
        "//apt/private:index",
        "//apt/private:lockfile",
        "//apt/private:resolve",
    ],
)
