load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files([
    "apt.bzl",
    "extensions.bzl",
])

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//apt/private:dpkg_status",
        "//apt/private:dpkg_statusd",
    ],
)

bzl_library(
    name = "apt",
    visibility = ["//visibility:public"],
    deps = [
        "//apt/private:deb_resolve",
        "//apt/private:deb_translate_lock",
    ],
)

bzl_library(
    name = "extensions",
    srcs = ["extensions.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//apt/private:deb_import",
        "//apt/private:deb_resolve",
        "//apt/private:deb_translate_lock",
        "//apt/private:lockfile",
        "@bazel_features//:features",
    ],
)
