load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

# For stardoc to reference the files
exports_files(["defs.bzl"])

bzl_library(
    name = "dependencies",
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_tools//tools/build_defs/repo:http.bzl",
        "@bazel_tools//tools/build_defs/repo:utils.bzl",
    ],
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//distroless/private:cacerts",
        "//distroless/private:flatten",
        "//distroless/private:group",
        "//distroless/private:home",
        "//distroless/private:java_keystore",
        "//distroless/private:locale",
        "//distroless/private:os_release",
        "//distroless/private:passwd",
    ],
)

bzl_library(
    name = "toolchains",
    srcs = ["toolchains.bzl"],
    visibility = ["//visibility:public"],
    deps = ["@aspect_bazel_lib//lib:repositories"],
)
