load("@aspect_bazel_lib//lib:docs.bzl", "stardoc_with_diff_test", "update_docs")
load("@rules_java//java:java_binary.bzl", "java_binary")

java_binary(
    name = "renderer",
    main_class = "com/google/devtools/build/stardoc/renderer/RendererMain",
    runtime_deps = ["@stardoc-prebuilt//jar"],
)

stardoc_with_diff_test(
    name = "rules",
    bzl_library_target = "@rules_distroless//distroless:defs",
    renderer = "renderer",
)

stardoc_with_diff_test(
    name = "apt",
    bzl_library_target = "@rules_distroless//apt:extensions",
    renderer = "renderer",
)

update_docs(name = "update")
