load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files([
    "dpkg_statusd.sh",
    "dpkg_status.sh",
    "copy.sh.tmpl",
    "package_arch.BUILD.tmpl",
])

bzl_library(
    name = "dpkg_status",
    srcs = ["dpkg_status.bzl"],
    visibility = ["//apt:__subpackages__"],
    deps = ["//distroless/private:tar"],
)

bzl_library(
    name = "dpkg_statusd",
    srcs = ["dpkg_statusd.bzl"],
    visibility = ["//apt:__subpackages__"],
    deps = ["//distroless/private:tar"],
)

bzl_library(
    name = "index",
    srcs = ["index.bzl"],
    visibility = ["//apt:__subpackages__"],
    deps = [
        ":deb_import",
        ":lockfile",
    ],
)

bzl_library(
    name = "lockfile",
    srcs = ["lockfile.bzl"],
    visibility = ["//apt:__subpackages__"],
    deps = [":pkg"],
)

bzl_library(
    name = "pkg",
    srcs = ["pkg.bzl"],
    visibility = ["//apt:__subpackages__"],
    deps = [
        "@bazel_skylib//lib:paths",
    ],
)

bzl_library(
    name = "manifest",
    srcs = ["manifest.bzl"],
    visibility = ["//apt:__subpackages__"],
    deps = [
        ":lockfile",
        ":package_index",
        ":util",
        "@aspect_bazel_lib//lib:repo_utils",
    ],
)

bzl_library(
    name = "package_index",
    srcs = ["package_index.bzl"],
    visibility = ["//apt:__subpackages__"],
    deps = [":version"],
)

bzl_library(
    name = "resolve",
    srcs = ["resolve.bzl"],
    visibility = ["//apt:__subpackages__"],
    deps = [
        ":lockfile",
        ":manifest",
        ":package_index",
        "@aspect_bazel_lib//lib:repo_utils",
    ],
)

bzl_library(
    name = "version",
    srcs = ["version.bzl"],
    visibility = ["//apt:__subpackages__"],
    deps = ["@aspect_bazel_lib//lib:strings"],
)

bzl_library(
    name = "deb_import",
    srcs = ["deb_import.bzl"],
    visibility = ["//apt:__subpackages__"],
    deps = [
        ":util",
        # NOTE: I had to add cache.bzl because bazel test //docs:update_1_test was failing with
        # Stardoc documentation generation failed:
        # File <SANDBOX>/bin/docs/apt_stardoc.runfiles/bazel_tools/tools/build_defs/repo/http.bzl imported ':cache.bzl',
        # yet <SANDBOX>/bin/docs/apt_stardoc.runfiles/bazel_tools/tools/build_defs/repo/cache.bzl was not found.
        "@bazel_tools//tools/build_defs/repo:cache.bzl",
        "@bazel_tools//tools/build_defs/repo:http.bzl",
        "@bazel_tools//tools/build_defs/repo:utils.bzl",
    ],
)

bzl_library(
    name = "util",
    srcs = ["util.bzl"],
    visibility = ["//apt:__subpackages__"],
)
