load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files([
    "dpkg_statusd.sh",
    "dpkg_status.sh",
    "copy.sh.tmpl",
    "package.BUILD.tmpl",
])

bzl_library(
    name = "dpkg_status",
    srcs = ["dpkg_status.bzl"],
    visibility = ["//apt:__subpackages__"],
    deps = ["//distroless/private:tar"],
)

bzl_library(
    name = "dpkg_statusd",
    srcs = ["dpkg_statusd.bzl"],
    visibility = ["//apt:__subpackages__"],
    deps = ["//distroless/private:tar"],
)

bzl_library(
    name = "deb_translate_lock",
    srcs = ["deb_translate_lock.bzl"],
    visibility = ["//apt:__subpackages__"],
    deps = [
        ":deb_import",
        ":lockfile",
        "@bazel_tools//tools/build_defs/repo:cache.bzl",
        "@bazel_tools//tools/build_defs/repo:http.bzl",
        "@bazel_tools//tools/build_defs/repo:utils.bzl",
    ],
)

bzl_library(
    name = "lockfile",
    srcs = ["lockfile.bzl"],
    visibility = ["//apt:__subpackages__"],
    deps = [":pkg"],
)

bzl_library(
    name = "pkg",
    srcs = ["pkg.bzl"],
    visibility = ["//apt:__subpackages__"],
)

bzl_library(
    name = "manifest",
    srcs = ["manifest.bzl"],
    visibility = ["//apt:__subpackages__"],
    deps = [
        ":apt_deb_repository",
        ":apt_dep_resolver",
        ":lockfile",
        ":util",
        ":version_constraint",
        "@aspect_bazel_lib//lib:repo_utils",
    ],
)

bzl_library(
    name = "apt_deb_repository",
    srcs = ["apt_deb_repository.bzl"],
    visibility = ["//apt:__subpackages__"],
    deps = [
        ":nested_dict",
        ":version_constraint",
        "@bazel_skylib//lib:paths",
    ],
)

bzl_library(
    name = "apt_dep_resolver",
    srcs = ["apt_dep_resolver.bzl"],
    visibility = ["//apt:__subpackages__"],
    deps = [
        ":util",
        ":version",
        ":version_constraint",
    ],
)

bzl_library(
    name = "deb_resolve",
    srcs = ["deb_resolve.bzl"],
    visibility = ["//apt:__subpackages__"],
    deps = [
        ":apt_deb_repository",
        ":apt_dep_resolver",
        ":lockfile",
        ":manifest",
        "@aspect_bazel_lib//lib:repo_utils",
    ],
)

bzl_library(
    name = "version",
    srcs = ["version.bzl"],
    visibility = ["//apt:__subpackages__"],
    deps = ["@aspect_bazel_lib//lib:strings"],
)

bzl_library(
    name = "deb_import",
    srcs = ["deb_import.bzl"],
    visibility = ["//apt:__subpackages__"],
    deps = [
        ":starlark_codegen",
        ":util",
        "@bazel_tools//tools/build_defs/repo:http.bzl",
    ],
)

bzl_library(
    name = "util",
    srcs = ["util.bzl"],
    visibility = ["//apt:__subpackages__"],
    deps = [
        "@bazel_skylib//lib:sets",
    ],
)

bzl_library(
    name = "version_constraint",
    srcs = ["version_constraint.bzl"],
    visibility = ["//apt:__subpackages__"],
    deps = [":version"],
)

bzl_library(
    name = "nested_dict",
    srcs = ["nested_dict.bzl"],
    visibility = ["//apt:__subpackages__"],
)

bzl_library(
    name = "starlark_codegen",
    srcs = ["starlark_codegen.bzl"],
    visibility = ["//apt:__subpackages__"],
    deps = [
        ":util",
    ],
)
