load(":apt_deb_repository_test.bzl", "apt_deb_repository_tests")
load(":apt_dep_resolver_test.bzl", "apt_dep_resolver_tests")
load(":nested_dict_test.bzl", "nested_dict_tests")
load(":version_constraint_test.bzl", "version_constraint_tests")
load(":version_test.bzl", "version_tests")

apt_deb_repository_tests()

apt_dep_resolver_tests()

nested_dict_tests()

version_tests()

version_constraint_tests()
