load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(["cacerts.sh"])

bzl_library(
    name = "cacerts",
    srcs = ["cacerts.bzl"],
    visibility = ["//distroless:__subpackages__"],
    deps = [":tar"],
)

bzl_library(
    name = "tar",
    srcs = ["tar.bzl"],
    visibility = ["//distroless:__subpackages__"],
)
