load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(["cacerts.sh"])

bzl_library(
    name = "cacerts",
    srcs = ["cacerts.bzl"],
    visibility = ["//distroless:__subpackages__"],
    deps = [":tar"],
)

bzl_library(
    name = "locale",
    srcs = ["locale.bzl"],
    visibility = ["//distroless:__subpackages__"],
    deps = [":tar"],
)

bzl_library(
    name = "group",
    srcs = ["group.bzl"],
    visibility = ["//distroless:__subpackages__"],
    deps = [
        "@aspect_bazel_lib//lib:expand_template",
        "@aspect_bazel_lib//lib:tar",
        "@aspect_bazel_lib//lib:utils",
        "@bazel_skylib//rules:write_file",
    ],
)

bzl_library(
    name = "os_release",
    srcs = ["os_release.bzl"],
    visibility = ["//distroless:__subpackages__"],
    deps = [
        "@aspect_bazel_lib//lib:expand_template",
        "@aspect_bazel_lib//lib:tar",
        "@aspect_bazel_lib//lib:utils",
        "@bazel_skylib//rules:write_file",
    ],
)

bzl_library(
    name = "passwd",
    srcs = ["passwd.bzl"],
    visibility = ["//distroless:__subpackages__"],
    deps = [
        "@aspect_bazel_lib//lib:expand_template",
        "@aspect_bazel_lib//lib:tar",
        "@aspect_bazel_lib//lib:utils",
        "@bazel_skylib//rules:write_file",
    ],
)

bzl_library(
    name = "tar",
    srcs = ["tar.bzl"],
    visibility = ["//distroless:__subpackages__"],
)
