load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_java//java:defs.bzl", "java_binary")

exports_files([
    "cacerts.sh",
    "locale.sh",
    "flatten.sh",
])

java_binary(
    name = "keystore_binary",
    srcs = ["JavaKeyStore.java"],
    javacopts = [
        "-Xlint:-options",
    ],
    main_class = "JavaKeyStore",
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "cacerts",
    srcs = ["cacerts.bzl"],
    visibility = ["//distroless:__subpackages__"],
    deps = [":tar"],
)

bzl_library(
    name = "locale",
    srcs = ["locale.bzl"],
    visibility = ["//distroless:__subpackages__"],
    deps = [":tar"],
)

bzl_library(
    name = "group",
    srcs = ["group.bzl"],
    visibility = ["//distroless:__subpackages__"],
    deps = [
        "@aspect_bazel_lib//lib:expand_template",
        "@aspect_bazel_lib//lib:tar",
        "@aspect_bazel_lib//lib:utils",
        "@bazel_skylib//rules:write_file",
    ],
)

bzl_library(
    name = "os_release",
    srcs = ["os_release.bzl"],
    visibility = ["//distroless:__subpackages__"],
    deps = [
        "@aspect_bazel_lib//lib:expand_template",
        "@aspect_bazel_lib//lib:tar",
        "@aspect_bazel_lib//lib:utils",
        "@bazel_skylib//rules:write_file",
    ],
)

bzl_library(
    name = "passwd",
    srcs = ["passwd.bzl"],
    visibility = ["//distroless:__subpackages__"],
    deps = [
        ":util",
        "@aspect_bazel_lib//lib:expand_template",
        "@aspect_bazel_lib//lib:tar",
        "@aspect_bazel_lib//lib:utils",
        "@bazel_skylib//rules:write_file",
    ],
)

bzl_library(
    name = "java_keystore",
    srcs = ["java_keystore.bzl"],
    visibility = ["//distroless:__subpackages__"],
    deps = [":tar"],
)

bzl_library(
    name = "home",
    srcs = ["home.bzl"],
    visibility = ["//distroless:__subpackages__"],
    deps = [
        ":tar",
        ":util",
        "@aspect_bazel_lib//lib:tar",
    ],
)

bzl_library(
    name = "flatten",
    srcs = ["flatten.bzl"],
    visibility = ["//distroless:__subpackages__"],
    deps = [":tar"],
)

bzl_library(
    name = "tar",
    srcs = ["tar.bzl"],
    visibility = [
        "//apt:__subpackages__",
        "//distroless:__subpackages__",
    ],
    deps = [
        "@aspect_bazel_lib//lib:tar",
        "@bazel_skylib//lib:sets",
    ],
)

bzl_library(
    name = "util",
    srcs = ["util.bzl"],
    visibility = ["//distroless:__subpackages__"],
)
