bazel_dep(name = "rules_distroless", version = "0.0.0", dev_dependency = True)
bazel_dep(name = "bazel_skylib", version = "1.5.0", dev_dependency = True)
bazel_dep(name = "platforms", version = "0.0.10", dev_dependency = True)
bazel_dep(name = "rules_oci", version = "2.0.0-rc0", dev_dependency = True)
bazel_dep(name = "container_structure_test", version = "1.16.0", dev_dependency = True)
bazel_dep(name = "aspect_bazel_lib", version = "2.7.3", dev_dependency = True)

local_path_override(
    module_name = "rules_distroless",
    path = "../..",
)

apt = use_extension("@rules_distroless//apt:extensions.bzl", "apt")
apt.install(
    name = "bullseye",
    lock = ":bullseye.lock.json",
    manifest = ":bullseye.yaml",
)
apt.install(
    name = "bullseye_nolock",
    manifest = ":bullseye.yaml",
    nolock = True,
)

# bazel run @bullseye//:lock
use_repo(apt, "bullseye", "bullseye_nolock")
