load("//distroless:defs.bzl", "cacerts")
load("//distroless/tests:asserts.bzl", "assert_tar_listing")

cacerts(
    name = "cacerts",
    package = "@example-bullseye-ca-certificates//:data.tar.xz",
)

assert_tar_listing(
    name = "test_cacerts",
    actual = "cacerts",
    expected = """\
#mtree
./etc time=946684800.0 mode=755 gid=0 uid=0 type=dir
./etc/ssl time=0.0 mode=755 gid=0 uid=0 type=dir
./etc/ssl/certs time=0.0 mode=755 gid=0 uid=0 type=dir
./etc/ssl/certs/ca-certificates.crt time=0.0 mode=555 gid=0 uid=0 type=file size=200313 sha1digest=01b4ff230afaeeda5cddaf9a002cec9bc9a6d1b4
./usr time=0.0 mode=755 gid=0 uid=0 type=dir
./usr/share time=0.0 mode=755 gid=0 uid=0 type=dir
./usr/share/doc time=0.0 mode=755 gid=0 uid=0 type=dir
./usr/share/doc/ca-certificates time=0.0 mode=755 gid=0 uid=0 type=dir
./usr/share/doc/ca-certificates/copyright time=0.0 mode=555 gid=0 uid=0 type=file size=18940 sha1digest=4c49e10ddbcfc0f36816df7f9cb503d665621017
""",
)
